@@ -11,8 +11,6 @@ HASERL_INSTALL_TARGET:=YES
 
 # force haserl 0.8.0 to use install-sh so stripping works
 HASERL_CONF_ENV = ac_cv_path_install=./install-sh
-# the above doesn't interact nicely with a shared cache, so disable for now
-HASERL_USE_CONFIG_CACHE = NO
 ifeq ($(BR2_PACKAGE_HASERL_WITH_LUA),y)
 	HASERL_CONF_OPT += --with-lua=$(STAGING_DIR) \
 		--with-lua-headers=$(STAGING_DIR)
